Added basic pagination

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
                     <img src="{{ url }}">
                 </p>
             {% endfor %}
+            <div class='paginate'>
+                <a class='button' data-max-tag-id='' href='/next'>View More...</a>
+            </div>
         </div>
     <!-- Insert the scripts!  -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
