--- a/static/main.css
+++ b/static/main.css
@@ -24,13 +24,18 @@ header.sticky {
 }
 
 .main_container {
-    padding: 150px;
-    width: 100%;
-    margin: 0 auto;}
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5em;
+    width: 70%;
+    overflow: hidden;
+}
 
 img {
-    margin: 10px;
-    width: 500px;
+    width: 29.33%;
+    margin: 2%;
+    float: left;
 }
 
 ul {
