--- a/static/main.css
+++ b/static/main.css
@@ -39,6 +39,11 @@ img {
     box-shadow: 10px 10px 5px #888888;
 }
 
+#more {
+    display: block;
+    clear: both;
+}
+
 ul {
     margin: 0;
     padding: 0;
