Edge case no more images to load

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,10 @@
                 <img src="{{ url }}">
             {% endfor %}
         </div>
+        {% if is_next %}
+            <div class="button_container">
+            </div>
+        {% endif %}
     <!-- Insert the scripts!  -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="../static/myjs.js"></script>
