--- a/static/main.css
+++ b/static/main.css
@@ -27,11 +27,18 @@ header.sticky {
     text-align: left;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5em;
+    padding-top: 7em;
     width: 70%;
     overflow: hidden;
 }
 
+.button_container {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2em;
+    width: 70%;
+    text-align: center;
+}
 img {
     width: 29.33%;
     margin: 2%;
@@ -42,8 +49,28 @@ img {
 #more {
     display: block;
     clear: both;
+    background-color:#44c767;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:1px solid #18ab29;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
 }
 
+#more:hover {
+    background-color: #89f052;;
+}
+
+#more:active {
+    position:relative;
+    top:1px;
+}
 
 ul {
     margin: 0;
