--- a/static/main.css
+++ b/static/main.css
@@ -47,6 +47,8 @@ img {
 }
 
 #more {
+    width: 80%;
+    height: 25%;;
     display: block;
     clear: both;
     background-color:#44c767;
@@ -57,7 +59,7 @@ img {
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
-    font-size:17px;
+    font-size:2em;
     padding:16px 31px;
     text-decoration:none;
     text-shadow:0px 1px 0px #2f6627;
