--- a/static/main.css
+++ b/static/main.css
@@ -18,7 +18,7 @@ header{
     text-align: left;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 7em;
+    margin-top: 2em;
     width: 70%;
     overflow: hidden;
 }
@@ -38,7 +38,7 @@ img {
 }
 
 #more {
-    width: 60%;
+    width: 50%;
     height: 20%;;
     display: block;
     clear: both;
